limit scrollbar fix to hover enabled devices

--- a/css/main.css
+++ b/css/main.css
@@ -910,10 +910,6 @@ section {
   transition: all 0.2s;
 }
 
-.scrollbar-present, #slider label.scrollbar-present{
-  padding-right: calc(3rem + 15px);
-}
-
 hr {
   border-bottom: none;
 }
@@ -1683,9 +1679,12 @@ article#about-us button{
   * {
     cursor: initial;
   }
-  .scrollbar-present, #slider label.scrollbar-present{
-    padding-right: 3rem;
-  }
+}
+
+@media (hover: hover) {
+.scrollbar-present, #slider label.scrollbar-present{
+  padding-right: calc(3rem + 15px);
+}
 }
 
 @media (orientation: portrait) {
